# ROS-Camera-Capture-Sync

./: CMakeLists.txt  README.md  package.xml
include/sensor_capture/: camera_interfaces.hpp  camera_properties.hpp  sub_sync.hpp
include/sensor_capture/nodes/: camera_node.hpp
src/: sub_sync.cpp
src/nodes/: cam_sub_sync_node.cpp  timestamp.cpp
